# omega-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
omega_mcp_server/: __init__.py  server.py
omega_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
