[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-mcp-server"
version = "0.1.0"
description = "MCP server exposing omega-cli OSINT tools to AI assistants (Copilot, Claude, etc.)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ekoelogan", email = "Ekoelogan@users.noreply.github.com"}
]
keywords = ["mcp", "osint", "security", "ai", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
omega-mcp = "omega_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["omega_mcp_server*"]
